# SchemaAPI

./: .env  .gitignore  README.md  README_EN.md  README_PT.md  build.ps1  docker-compose.yml  pytest.ini
config/: development.yml
database/migrations/: 001_create_initial_tables.sql  002_add_summary_and_trigger.sql  003_create_action_items_table.sql  004_create_topics_table.sql  005_enable_pgvector_and_add_embedding_column.sql  006_add_raw_files_table.sql  007_create_knowledge_graph_tables.sql  008_create_relationships_table.sql  009_create_feedback_table.sql  010_create_classifications_table.sql  011_create_tabular_data_table.sql  012_implement_versioning_schema.sql  013_create_temporal_patterns_table.sql  014_add_classification_examples_table.sql  015_create_document_structures_table.sql  016_create_financial_kpis_table.sql  017_create_feedback_analysis_tables.sql  018_update_action_items_table.sql  019_create_document_templates_table.sql  020_add_risk_analysis_table.sql  021_create_legal_tables.sql  (+1 more)
python-workers/: Dockerfile  requirements.txt
rust-core/: Cargo.toml  Dockerfile
rust-core/src/: main.rs
rust-core/src/api/handlers/: diff_handler.rs  document_handler.rs  feedback_handler.rs  graph_handler.rs  mod.rs
rust-core/src/domain/model/: document.rs  knowledge_graph.rs  mod.rs
rust-core/src/domain/service/: diff_service.rs  mod.rs
rust-core/src/infrastructure/: mod.rs
rust-core/src/infrastructure/messaging/: mod.rs  rabbitmq_publisher.rs
rust-core/src/infrastructure/persistence/: mod.rs  postgres_repository.rs
tests/: requirements-test.txt
(+24 files in other folders)
