[package]
name = "rust-core"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
lapin = "2"
config = { version = "0.14", features = ["yaml"] }
pgvector = { version = "0.3", features = ["sqlx"] }
actix-multipart = "0.7"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }