[package]
name = "rust-core"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "=4.5.1"
tokio = { version = "=1.37.0", features = ["full"] }
serde = { version = "=1.0.197", features = ["derive"] }
serde_json = "=1.0.115"
sqlx = { version = "=0.7.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "=1.8.0", features = ["v4", "serde"] }
chrono = { version = "=0.4.38", features = ["serde"] }
lapin = "=2.3.1"
config = { version = "=0.14.0", features = ["yaml"] }
pgvector = { version = "=0.3.2", features = ["sqlx"] }
actix-multipart = "=0.6.1"
futures-util = "=0.3.31"
reqwest = { version = "=0.12.2", features = ["json"] }
utoipa = { version = "4.2.3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }